--- a/template.yaml
+++ b/template.yaml
@@ -6,7 +6,6 @@ metadata:
   description: Create a Devspaces with generative code 
   tags:
     - ai
-    - java
 spec:
   owner: rhdh
   type: service
@@ -32,11 +31,57 @@ spec:
         apikey:
           title: API Key
           type: string
+    - title: Application repository Information
+      required:
+        - repo
+      properties:
+        repo:
+          title: Repository Location
+          type: object
+          properties:
+            host:
+              title: Repo Host
+              type: string
+              description: Your SCM host
+              default: gitlab-gitlab.apps.cluster-bf7bx.bf7bx.sandbox72.opentlc.com
+              enum:
+                - gitlab-gitlab.apps.cluster-bf7bx.bf7bx.sandbox72.opentlc.com
+            owner:
+              title: Repo Owner
+              type: string
+              description: Your SCM host organization/group
+              default: development
+          
   steps:
-    - id: fetch-base
-      name: Fetch Base
+    - id: template
+      name: Fetch Skeleton + Template
       action: fetch:template
       input:
-        url: ./template
+        url: ./skeleton
+        copyWithoutTemplating:
+          - .github/workflows/*
         values:
-          name: ${{parameters.name}}
+          apikey: ${{ parameters.apikey }}
+          provider: ${{ parameters.provider }}
+          maasURL: ${{ parameters.maasURL}}
+          owner: ${{ user.entity.metadata.name }}
+          model: ${{ parameters.model }}
+          cluster: .apps.cluster-bf7bx.bf7bx.sandbox72.opentlc.com
+          host: ${{ parameters.repo.host }}
+          destination: ${{ parameters.repo.owner }}/${{ parameters.model }}
+          port: 8080
+
+    - id: publish
+      name: Publish
+      action: publish:gitlab
+      input:
+        repoUrl: "${{ parameters.repo.host }}?owner=${{ parameters.repo.owner }}&repo=${{parameters.model}}"
+        repoVisibility: public
+        
+    - id: register
+      name: Register
+      action: catalog:register
+      input:
+        repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
+        catalogInfoPath: "/catalog-info.yaml"
+
