--- a/template.yaml
+++ b/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: devspaces-for-ai
-  title: Devspaces for AI 5
+  title: Devspaces for AI 6
   description: Create a Devspaces with generative code 
   tags:
     - ai
@@ -83,5 +83,5 @@ spec:
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
-        catalogInfoPath: "/catalog-info.yaml"
+        catalogInfoPath: "skeleton/catalog-info.yaml"
 
