--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -9,6 +9,6 @@ metadata:
     - java
     - quarkus
   links:
-    - url: https://devspaces${{values.cluster}}/#https://${{values.host}}/${{values.destination}}
+    - url: https://devspaces-${{values.cluster}}/#https://${{values.host}}/${{values.destination}}
       title: OpenShift Dev Spaces (VS Code)
       icon: web
